# verus-quadratic-extension

./: Cargo.toml  README.md
docs/: dts-generic-migration-session-report.md  nonneg-add-remaining-work.md  nonneg-mul-remaining-work.md  nonneg-mul-session-report.md
src/: additive.rs  dyn_tower.rs  dyn_tower_lemmas.rs  equivalence.rs  field.rs  instances.rs  lemmas.rs  lib.rs  ordered.rs  radicand.rs  ring.rs  runtime.rs  runtime_field.rs  runtime_qext.rs  spec.rs
